@@ -5,6 +5,7 @@ noinst_HEADERS = environment.h \
 	object.h \
 	program.h \
 	stack.h \
+	symbols.h \
 	weak_object.h
 
 if DEBUG
