@@ -16,6 +16,7 @@ Snapshot ????-??-?? ToDo
 Now
  * VM
    - Throw on wrong function number at minimization.
+   - Storing symbols in environment (not yet using).
  * GP
    - Change generation of new population.
    - Remove mutations from crossover.
